[gd_scene load_steps=3 format=3 uid="uid://y26gsgs6ahbf"]

[ext_resource type="Script" uid="uid://kgby6bvusjcp" path="res://scene/event/MindStateEvent/mind_state_battle_panel.gd" id="1_ij0qh"]
[ext_resource type="PackedScene" uid="uid://b80jq7wxyi2j7" path="res://scene/Seat/seat.tscn" id="2_oeu2u"]

[node name="MindStateBattle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -20.0
offset_bottom = -380.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ij0qh")

[node name="TextArea" type="Control" parent="."]
anchors_preset = 0
offset_right = 700.0
offset_bottom = 700.0

[node name="BgImage" type="ColorRect" parent="TextArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.62288105, 0.62288105, 0.62288105, 1)

[node name="CardArea" type="Control" parent="."]
anchors_preset = 0
offset_left = 700.0
offset_right = 1900.0
offset_bottom = 700.0

[node name="BgImage" type="ColorRect" parent="CardArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MindStateSwarmCardRoot" type="Control" parent="CardArea"]
anchors_preset = 0
offset_left = 300.0
offset_top = 170.0
offset_right = 520.0
offset_bottom = 490.0

[node name="MindStateSwarmCardMask" type="Control" parent="CardArea"]
anchors_preset = 0
offset_left = 300.0
offset_top = 170.0
offset_right = 520.0
offset_bottom = 490.0

[node name="InputCardSeat" type="Control" parent="CardArea"]
anchors_preset = 0
offset_left = 650.0
offset_top = 170.0
offset_right = 870.0
offset_bottom = 490.0

[node name="Seat" parent="CardArea/InputCardSeat" instance=ExtResource("2_oeu2u")]
layout_mode = 0

[node name="ConfirmTargetButton" type="Button" parent="CardArea"]
layout_mode = 0
offset_left = 1100.0
offset_top = 325.0
offset_right = 1200.0
offset_bottom = 375.0
text = "确认"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1800.0
offset_right = 1900.0
offset_bottom = 50.0
text = "关闭界面"
